--- a/Lab1.html
+++ b/Lab1.html
@@ -1,5 +1,14 @@
 <!DOCTYPE html>
 <html>
-    <h2>Heading 2</h2>
-    <p>Hello world!</p>
+    <img src="https://www.ucsd.edu/_resources/img/logo_UCSD.png" alt="UCSD logo">
+    <a href="#S1">Section 1</a>
+    <a href="#S2">Section 2</a>
+    <div id="S1">
+        <h2>Section 1</h2>
+        <img src="https://brand.ucsd.edu/_images/logos-and-brand-elements/additional-campus-logos/ucsd-athletics-logo.svg" alt="Triton logo">
+    </div>
+    <div id="S2">
+        <h2>Section 2</h2>
+        <img src="https://brand.ucsd.edu/_images/logos/logos-college-logos-07-23.svg " alt="College logos">
+    </div>
 </html>
