--- a/Lab1.html
+++ b/Lab1.html
@@ -2,24 +2,25 @@
 <html>
     <head>
         <link rel="stylesheet" href="styles.css">
+        <meta name="viewport" content="width=device-width,initial-scale=1" />
         <ul class="navbar">
             <img id='ucsd-logo' src="https://www.ucsd.edu/_resources/img/logo_UCSD.png" alt="UCSD logo">
             <br>
-            <li><a href="#S1">Section 1</a></li>
-            <li><a href="#S2">Section 2</a></li>
-            <li><a href="#S3">Section 3</a></li>
+            <li class="anchor"><a href="#S1">Section 1</a></li>
+            <li class="anchor"><a href="#S2">Section 2</a></li>
+            <li class="anchor"><a href="#S3">Section 3</a></li>
         </ul>
     </head>
 
     <div id="S1" class="s1">
         <h2>Section 1</h2>
-        <img src="https://brand.ucsd.edu/_images/logos-and-brand-elements/additional-campus-logos/ucsd-athletics-logo.svg" alt="Triton logo">
+        <img class='logo' src="https://brand.ucsd.edu/_images/logos-and-brand-elements/additional-campus-logos/ucsd-athletics-logo.svg" alt="Triton logo">
         <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam scelerisque justo nec venenatis ornare. Aenean eleifend quam vel dictum porttitor. Suspendisse varius nibh ut tellus lobortis, in ultrices lacus dictum. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Cras est eros, blandit sed elit sed, semper ultricies lectus. Sed tempor et diam sit amet tempor. Vivamus ut sem eu orci euismod feugiat nec sed leo. In sed tincidunt tellus, sed sodales mauris. Donec nec mi sed risus ornare vestibulum scelerisque et diam.
         </p>
     </div>
     <div id="S2" class="s2">
         <h2>Section 2</h2>
-        <img src="https://brand.ucsd.edu/_images/logos/logos-college-logos-07-23.svg " alt="College logos">
+        <img class='logo' src="https://brand.ucsd.edu/_images/logos/logos-college-logos-07-23.svg " alt="College logos">
         <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam scelerisque justo nec venenatis ornare. Aenean eleifend quam vel dictum porttitor. Suspendisse varius nibh ut tellus lobortis, in ultrices lacus dictum. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Cras est eros, blandit sed elit sed, semper ultricies lectus. Sed tempor et diam sit amet tempor. Vivamus ut sem eu orci euismod feugiat nec sed leo. In sed tincidunt tellus, sed sodales mauris. Donec nec mi sed risus ornare vestibulum scelerisque et diam.
         </p>
     </div>
